2005-04-05 20:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GoApp.m: Correction for crash when selecting a server
	command.

2005-04-05 20:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/Board.m
	* Source/ClickCell.m
	* Source/Controller.m
	* Source/GameInspectorPanel.m
	* Source/GoApp.m
	* Source/godict.c
	* Source/GoWindow.m
	* Source/igsglue.m
	* Source/igssocket.m: Major code cleanup.  Removed any and all
	warnings, etc.

2005-04-03 15:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/English.lproj/NeXTGo.gorm: Corrected color on a lot
	of the text fields.
	* Source/GNUmakefile: Added PRINCIPAL_CLASS
	* Source/NeXTGo_main.m: Changed to use standard startup.

2005-04-03 15:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GNUmakefile: Added localized .gorm file.
	* Source/GoServer.h: Added newline at the end.
	* Source/NeXTGo_main.m: Cleaned up a little.
	* Source/English.lproj: Removed.
	* Source/English.lproj/NeXTGo.gorm: Added new interface.

2005-04-03 15:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/Board.m: Removed all of the debugging information.