@@ -1,3 +1,7 @@
+2005-11-05 15:27 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Source/smartgo.h: Updated declarations.
+
 2005-04-05 20:42 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/GoApp.m: Correction for crash when selecting a server
